// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> should render properly 1`] = `
<div
  className="DatePicker "
  style={
    Object {
      "maxWidth": "300px",
      "muiPrepared": true,
    }
  }
>
  <div
    className="ms-Fabric root-33"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-34"
          htmlFor="TextField0"
        >
          Select Date
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={undefined}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="DD/MM/YYYY"
            type="text"
            value=""
          />
          <div
            className="ms-TextField-suffix fieldPrefixSuffix"
          >
            <button
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onTouchStart={[Function]}
              onTouchTap={[Function]}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "background": "none",
                  "border": 10,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 0,
                  "fontWeight": "inherit",
                  "height": 48,
                  "margin": "-15px",
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "padding": 12,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                  "width": 48,
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <i
                  className="material-icons md-dark md-18"
                  style={Object {}}
                >
                  date_range
                </i>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>
</div>
`;

exports[`<DatePicker /> should render when value prop passed 1`] = `
<div
  className="DatePicker "
  style={
    Object {
      "maxWidth": "300px",
      "muiPrepared": true,
    }
  }
>
  <div
    className="ms-Fabric root-33"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-34"
          htmlFor="TextField2"
        >
          Select Date
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={undefined}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField2"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="DD/MM/YYYY"
            type="text"
            value="26/10/2017"
          />
          <div
            className="ms-TextField-suffix fieldPrefixSuffix"
          >
            <button
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onTouchStart={[Function]}
              onTouchTap={[Function]}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "background": "none",
                  "border": 10,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 0,
                  "fontWeight": "inherit",
                  "height": 48,
                  "margin": "-15px",
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "padding": 12,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                  "width": 48,
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <i
                  className="material-icons md-dark md-18"
                  style={Object {}}
                >
                  date_range
                </i>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>
</div>
`;
